src/test/ui/parser/doc-comment-in-if-statement.stderr
error[E0753]: expected outer doc comment
  --> $DIR/doc-comment-in-if-statement.rs:2:13
   |
LL |     if true /*!*/ {}
   |             ^^^^^
   |
   = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items
help: you might have meant to write a regular comment
   |
LL -     if true /*!*/ {}
LL +     if true /**/ {}
   | 

error: outer attributes are not allowed on `if` and `else` branches
  --> $DIR/doc-comment-in-if-statement.rs:2:13
   |
LL |     if true /*!*/ {}
   |     --      ^^^^^ -- the attributes are attached to this branch
   |     |       |
   |     |       help: remove the attributes
   |     the branch belongs to this `if`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0753`.
